--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Yumuyta Zamanlayıcı</title>
+<title>Efe'nin Yumuyta Zamanlayıcı</title>
 <style>
     body {
         margin: 0;
@@ -104,7 +104,7 @@
 <body>
 <div id="header">Henry Games</div>
 
-<div id="title">Yumuyta Zamanlayıcısı</div>
+<div id="title">Efe'nin Yumuyta Zamanlayıcısı</div>
 
 <div id="controls">
     <input type="number" id="secondsInput" placeholder="Saniye" value="100">
